crates/puffin-cli/tests/snapshots/pip_compile__compile_wheel_path_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpKtoCCH
    - "--exclude-newer"
    - "2023-11-18T12:00:00Z"
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmp0htf0U/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile requirements.in --cache-dir [CACHE_DIR]
blinker==1.7.0
    # via flask
click==8.1.7
    # via flask
flask @ file://[TEMP_DIR]/flask-3.0.0-py3-none-any.whl
itsdangerous==2.1.2
    # via flask
jinja2==3.1.2
    # via flask
markupsafe==2.1.3
    # via
    #   jinja2
    #   werkzeug
werkzeug==3.0.1
    # via flask

----- stderr -----
Resolved 7 packages in [TIME]

