crates/puffin-cli/tests/snapshots/pip_compile__compile_wheel_path_dependency_missing.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpI36Udp
    - "--exclude-newer"
    - "2023-11-18T12:00:00Z"
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpuH6gF4/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Unable to locate distribution at: file://[TEMP_DIR]/flask-3.0.0-py3-none-any.whl
  Caused by: No such file or directory (os error 2)

