crates/puffin-cli/tests/snapshots/pip_compile__compile_yanked_version_direct.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmplcbD5Q
    - "--exclude-newer"
    - "2023-11-18T12:00:00Z"
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpRGHD2t/.venv
---
success: true
exit_code: 0
----- stdout -----
# This file was autogenerated by Puffin v0.0.1 via the following command:
#    puffin pip-compile requirements.in --cache-dir [CACHE_DIR]
attrs==21.1.0

----- stderr -----
Resolved 1 package in [TIME]

