crates/puffin-cli/tests/snapshots/pip_compile__compile_yanked_version_indirect.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpKpwYoD
    - "--exclude-newer"
    - "2023-11-18T12:00:00Z"
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmptdJhvi/.venv
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
  × No solution found when resolving dependencies:
  ╰─▶ Because there is no version of attrs available matching >20.3.0, <21.2.0
      and root depends on attrs>20.3.0, <21.2.0, version solving failed.

