crates/puffin-cli/tests/snapshots/pip_compile__conflicting_direct_url_dependency.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpZftc6D
  env:
    VIRTUAL_ENV: /var/folders/bc/qlsk3t6x7c9fhhbvvcg68k9c0000gp/T/.tmpuYGAMB/.venv
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
  × No solution found when resolving dependencies:
  ╰─▶ Because there is no version of werkzeug available matching ==3.0.0 and
      root depends on werkzeug==3.0.0, version solving failed.

