crates/puffin-cli/tests/snapshots/pip_compile__conflicting_repeated_url_dependency_version_match.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpI5Wp9g
  env:
    VIRTUAL_ENV: /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpEvaFaF/.venv
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: Conflicting URLs for package `werkzeug`: git+git+https://github.com/pallets/flask.git@2.0.0 and https://files.pythonhosted.org/packages/ff/1d/960bb4017c68674a1cb099534840f18d3def3ce44aed12b5ed8b78e0153e/Werkzeug-2.0.0-py3-none-any.whl

