crates/puffin-cli/tests/snapshots/pip_compile__missing_requirements_in.snap
---
source: crates/puffin-cli/tests/pip_compile.rs
info:
  program: puffin
  args:
    - pip-compile
    - requirements.in
    - "--cache-dir"
    - /var/folders/nt/6gf2v7_s3k13zq_t3944rwz40000gn/T/.tmpQVD5K4
---
success: false
exit_code: 2
----- stdout -----

----- stderr -----
error: failed to open file `requirements.in`
  Caused by: No such file or directory (os error 2)

